<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:text="@string/whoIsUser"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/userNameHere" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:text="@string/whatWasTheReason"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="317dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/reason" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendReport" />
</LinearLayout>