<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/borderLine1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/border_line"
        app:srcCompat="@drawable/purple_line" />

    <LinearLayout
        android:id="@+id/linearLayoutChatSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/profile_pic"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <LinearLayout
            android:id="@+id/linearLayoutNames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameSurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/name_surname"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/timeLeft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_left" />

            <Button
                android:id="@+id/goToChatButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chat" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/statusTextView"
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/status"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/statusOfChat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status_of_chat" />

            <ImageButton
                android:id="@+id/deleteChatButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/delete_chat"
                app:srcCompat="@android:drawable/ic_delete" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/borderLineTwo"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        app:srcCompat="@drawable/purple_line"
        android:layout_height="wrap_content" />
</LinearLayout>