<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="45dp"
                android:layout_height="35dp"
                app:srcCompat="@drawable/android_arrow_back_1161833" />

            <ImageView
                android:id="@+id/gLogo"
                android:layout_width="320dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/g_share_logo" />
        </LinearLayout>

        <TextView
            android:id="@+id/addNotice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addnotice"
            android:textAlignment="center"
            android:textColor="@android:color/holo_purple"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="224dp"
            android:layout_height="153dp"
            android:layout_marginStart="100dp"
            android:src="@android:drawable/ic_menu_add" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemnameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_nametext"
                android:textColor="#000000"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/itemNameinput"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="28dp"
                android:autofillHints=""
                android:ems="12"
                android:hint="@string/item_name"
                android:inputType="textPersonName"
                tools:targetApi="o" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/categoryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/categorytext"
                android:textColor="#000000"
                android:textSize="17sp" />

            <ImageButton
                android:id="@+id/transportButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/transport"
                app:srcCompat="@drawable/ic_car_black_24dp" />

            <ImageButton
                android:id="@+id/schoolButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/school"
                app:srcCompat="@drawable/ic_school_black_24dp" />

            <ImageButton
                android:id="@+id/laptopButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/laptop"
                app:srcCompat="@drawable/ic_laptop_black_24dp" />

            <ImageButton
                android:id="@+id/cameraButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/camera"
                app:srcCompat="@drawable/ic_photo_camera_black_24dp" />

            <ImageButton
                android:id="@+id/stationaryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/stationary"
                app:srcCompat="@drawable/ic_scissors_black_24dp" />

            <ImageButton
                android:id="@+id/petsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/pets"
                app:srcCompat="@drawable/ic_pets_black_24dp" />

            <ImageButton
                android:id="@+id/booksButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/books"
                app:srcCompat="@drawable/bookiconforhome" />

            <ImageButton
                android:id="@+id/othersButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/img_350691"
                android:contentDescription="TODO" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/daysText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daystext"
                android:textColor="#000000"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/daysinput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="4"
                android:hint="@string/days"
                android:inputType="numberDecimal"
                tools:targetApi="o" />
        </LinearLayout>

        <TextView
            android:id="@+id/noteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/notetext"
            android:textColor="#000000"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/noteinput"
            android:layout_width="268dp"
            android:layout_height="44dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/note"
            android:inputType="textPersonName"
            android:textColor="#000000"
            tools:targetApi="o" />

        <Button
            android:id="@+id/PublishButtonPurple"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_marginStart="80dp"
            android:text="@string/publishbutton"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_purple"
            android:textColorHighlight="#2196F3"
            android:textSize="18sp" />


    </LinearLayout>
</ScrollView>