<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/sort_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/sort_by"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/gIntervalLinearLayout"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/gIntervalCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/g_interval" />

        <EditText
            android:id="@+id/minGEditText"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="min G"
            android:inputType="number" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/divider3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="#000000" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/maxGEditText"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="max G"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/distanceLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/distanceCheckBox"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/distance" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="radius"
            android:inputType="number" />

        <TextView
            android:id="@+id/kmTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/km"
            android:textColor="#000000" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/newestFirstCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/newest_first" />

    <CheckBox
        android:id="@+id/alphabeticallyCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alphabetical_sort" />

    <CheckBox
        android:id="@+id/bookmarksCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bookmarks" />

    <Button
        android:id="@+id/applySortButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply" />
</LinearLayout>