<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/editProfileTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/edit_profile"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/changeProfilePicLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/profile_pic"
            app:srcCompat="@mipmap/ic_launcher" />

        <Button
            android:id="@+id/changePicButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/change_profile_picture"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/changeNameLayout"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/changeNameEditText"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/name_surname"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/changeNameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/changePasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/oldPasswordEditText"
                android:layout_width="159dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:ems="10"
                android:hint="@string/enter_old_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/newPasswordEditText"
                android:layout_width="159dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:ems="10"
                android:hint="@string/enter_new_password"
                android:inputType="textPassword" />
        </LinearLayout>


        <Button
            android:id="@+id/changePasswordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/change_password"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    </LinearLayout>

</LinearLayout>