<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/topDividerNotice"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#000000" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/itemPic"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/item_pic"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/item_pic"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewItemName"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/item_name"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/daysTextViewTransacted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/days"
                android:textColor="#000000" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/bottomDividerNotice"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#000000" />

</LinearLayout>